<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.flobberworm.demo.MainActivity">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:id="@+id/tv_pull"
        style="@style/AppCommonButton"
        android:text="@string/pull_refresh" />

    <TextView
        android:id="@+id/tv_recycle"
        style="@style/AppCommonButton"
        android:text="@string/recycle" />

    <TextView
        android:id="@+id/tv_parallax"
        style="@style/AppCommonButton"
        android:text="@string/parallax" />

    <TextView
        android:id="@+id/tv_digital"
        style="@style/AppCommonButton"
        android:text="@string/digital" />

    <TextView
        android:id="@+id/tv_parabola"
        style="@style/AppCommonButton"
        android:text="@string/parabola" />

</LinearLayout>
