<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_filter"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/integrated_sorting"
            android:textColor="@color/txt_rb_filter"
            android:textSize="14sp" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/highest_sales"
            android:textColor="@color/txt_rb_filter"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nearest_distance"
            android:textColor="@color/txt_rb_filter"
            android:textSize="14sp" />
    </RadioGroup>

    <TextView
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/commonStroke" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:button="@null"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/filter"
        android:textColor="@color/txt_rb_filter"
        android:textSize="14sp" />
</LinearLayout>